--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:11
 VOLUME /tmp
 EXPOSE 8080
-ADD ./target/dscatalog-0.0.1-SNAPSHOT.jar dscatalog-webapp.jar
-ENTRYPOINT ["java","-jar","/dscatalog-webapp.jar"]
+ADD ./target/dscatalog-0.0.1-SNAPSHOT.jar webapp-dscatalog.jar
+ENTRYPOINT ["java","-jar","/webapp-dscatalog.jar"]
