--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-select": "^5.0.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "jwt-decode": "^3.1.2",
@@ -23,6 +24,7 @@
     "react-hook-form": "^7.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "sass": "^1.37.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
