--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -20,6 +20,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
+    "react-currency-input-field": "^3.5.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.2",
     "react-router-dom": "^5.2.0",
